--- a/SantosInvestimentos.Css
+++ b/SantosInvestimentos.Css
@@ -99,11 +99,55 @@ nav {
    margin-top: 10%;
 }
 
-.products {
+.product {
     padding: 10px;
     text-align: center;
     word-wrap: break-word;
     align-items: center;
+}
+
+.setup {
+    margin-left: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 3rem 3rem;
+}
+
+#readbtn {
+    width: 50px;
+}
+
+#card {
+    width: 300px;
+    height: 300px;
+    border-radius: 15px;
+    margin-top: 100px;
+    border: 1px solid rgb(193, 196, 57);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position: relative;
+    overflow: hidden;
+}
+
+#card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 20px solid transparent;
+    border-top: 20px solid rgb(193, 196, 57);
+    border-right: 20px solid rgb(193, 196, 57);
+}
+
+#stptitle {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#stpdesc {
+    padding: 20px;
+    text-align: justify;
+    word-wrap: break-word;
+    overflow: hidden;
 }
 
 footer {
