--- a/SantosInvestimentos.Css
+++ b/SantosInvestimentos.Css
@@ -10,7 +10,7 @@
 :root {
 	--color-neutral-0: rgb(138, 4, 4);
 	--color-neutral-10: rgb(192, 8, 8);
-	--color-neutral-20: rgb(192, 24, 24);
+	--color-neutral-20: rgb(131, 39, 39);
 	--color-neutral-30: rgb(250, 70, 70);
     --color-neutral-40: rgb(193, 196, 57);
 }
@@ -20,13 +20,21 @@ body {
     align-items: center;
 }
 
-nav {
+main {
+    margin-top: 30px;
+}
+
+#navigator {
     width: 100%;
-    height: 5%;
+    height: 10%;
     display: flex;
     position: fixed;
-    margin-top: 20px;
-    text-align: center;   
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--color-neutral-20);
+    z-index: 10;
 }
 
 #navigator ul {
@@ -44,29 +52,31 @@ nav {
 
 .btn {
     padding: 10px 8px;
-    color: rgb(46, 122, 52);
-    border: 1px solid rgb(193, 196, 57);
-    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    border-left: 1px solid rgb(193, 196, 57);
+    border-right: 1px solid rgb(193, 196, 57);
+    border-radius: 5px;
     text-align: center;
-    user-select: none;
     cursor: pointer;
-    transition: 1s;
+    transition: all 1s;
+    text-decoration: none;
 }
 
 .btn:hover {
-    transition: 1s;
+    color: var(--color-neutral-40);
 }
 
 #merchan {
+    display: block;
     width: 100%;
-    display: flex;
-    position: relative;   
+    height: 400px;
+    background: var(--color-neutral-20);
 }
 
 #merchan img {
-    display: flex;
-    width: 100%;
-    opacity: 90%;
+    position: absolute;
+    margin: 70px;
+    margin-left: 470px;
 }
 
 #membership-title h1 {
@@ -97,7 +107,7 @@ nav {
     border: rgb(193, 196, 57);
     border-radius: 15px;
     margin-bottom: 200px;
-    margin-left: 200px;
+    margin-left: 250px;
     text-align: center;
 }
 
